--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -8,7 +8,7 @@
 
     js = d.createElement(s); js.id = id;
 
-    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+    js.src = "//connect.facebook.net/en_US/sdk.js";
 
     fjs.parentNode.insertBefore(js, fjs);
 
