--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -1,25 +1,4 @@
-<div ng-controller="sparkController">
-{{message}}
-<div id="fb-root"></div>
-  <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-
-    if (d.getElementById(id)) return;
-
-    js = d.createElement(s); js.id = id;
-
-    js.src = "//connect.facebook.net/en_US/sdk.js";
-
-    fjs.parentNode.insertBefore(js, fjs);
-
-    }(document, 'script', 'facebook-jssdk'));
-  </script>
-
-
-  <input type="" name="" placeholder="Username">
-  <input type="" name="" placeholder="Password">
-  <button ng-click="postRequest()">Log In</button>
-
-  <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
-
+<div ng-controller='registerCtrl'>
+  <h1>Welcome!</h1>
+  <button ng-click="getRequest()">Login with Facebook</button>
 </div>
