Revised register button
Used anchor tag to avoid CORS issues with facebook oauth

--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -1,4 +1,9 @@
 <div ng-controller='registerCtrl'>
   <h1>Welcome!</h1>
-  <button ng-click="getRequest()">Login with Facebook</button>
+
+  <a href="/auth/facebook" role="button">
+    <button>Login with Facebook</button>
+  </a>
+
+  <!-- <button ng-click="getRequest()">Login with Facebook</button> -->
 </div>
