--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -1,9 +1,11 @@
 <div ng-controller='registerCtrl'>
   <h1>Welcome!</h1>
 
-  <a href="/auth/facebook" role="button">
-    <button>Login with Facebook</button>
-  </a>
+  <!-- Included achor tag version commented out as an alternate to avoid CORS conflict -->
 
-  <!-- <button ng-click="getRequest()">Login with Facebook</button> -->
+  <!-- <a href="/auth/facebook" role="button">
+    <button>Login with Facebook</button>
+  </a> -->
+
+  <button ng-click="getRequest()">Login with Facebook</button>
 </div>
