removed login button from view

--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -3,9 +3,9 @@
 
   <!-- Included achor tag version commented out as an alternate to avoid CORS conflict -->
 
-  <a href="/auth/facebook" role="button">
+<!--   <a href="/auth/facebook" role="button">
     <button>Login with Facebook</button>
   </a>
-
+ -->
   <!-- <button ng-click="getRequest()">Login with Facebook</button> -->
 </div>
