--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -5,7 +5,7 @@
 
 <form action="/auth/facebook" method="get">
   <div>
-    <input type="submit" value="Log In With Facebook" ng-submit="load()">
+    <input type="submit" value="Log In With Facebook">
   </div>
 </form>
 
