Made minor changes to take survey view and server routes

--- a/app/client/views/takesurvey.html
+++ b/app/client/views/takesurvey.html
@@ -1,5 +1,7 @@
 <div ng-controller='takesurveyCtrl'>
   <h1>Now that that's out of the way!</h1>
 
-  <button ng-click="getRequest()">Let's take that survey</button>
+  <button ng-click="survey()">Let's take that survey</button>
+
+  <button ng-click="matches()">Been there, done that</button>
 </div>
