more styling; added another webfont

--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -1,5 +1,5 @@
 <div ng-controller='registerCtrl'>
-  <h1>Welcome!</h1>
+  <h2 id="subHeader">Welcome!</h2>
 
   <!-- Included achor tag version commented out as an alternate to avoid CORS conflict -->
 
