--- a/app/client/src/styles/styles.css
+++ b/app/client/src/styles/styles.css
@@ -1,7 +1,8 @@
 body {
   background: #FBDA52;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
+  font-family: 'Raleway', sans-serif;
 }
 
 ul, li {
@@ -13,9 +14,23 @@ ul, li {
 
 #mainHeader {
   color: grey;
-  font-size: 64px;
+  font-size: 80px;
+  font-family: 'Galada', cursive;
+  /*padding: 20px;*/
+}
+
+#subHeader {
+  padding: 20px
 }
 
 #surveyItem {
-  padding: 10px;
+  padding: 20px;
+}
+
+#surveyImg {
+  height: auto;
+  width: auto;
+  max-width: 600px;
+  max-height: 600px;
+  padding: 20px;
 }
