--- a/app/client/views/survey.html
+++ b/app/client/views/survey.html
@@ -4,8 +4,8 @@
 
   <div id="surveyItem" ng-repeat="users in data">
     <h2>{{users.caption}}</h2>
-    <img src="{{users.image_desktop}}" height="200" width="300">
-
+    <img  id="surveyImg" src="{{users.image_desktop}}" height="200" width="300">
+    <br>
         <label class="btn btn-primary">
           <input type="checkbox" ng-model="yes($event.isTrusted,users.id)" checked> That's me
         </label>
