--- a/app/client/views/takesurvey.html
+++ b/app/client/views/takesurvey.html
@@ -1,5 +1,5 @@
 <div ng-controller='takesurveyCtrl'>
-  <h1>Now that that's out of the way!</h1>
+  <h2 id="subHeader">Now that that's out of the way!</h1>
 
   <button ng-click="survey()">Let's take that survey</button>
 
