changed variable names for ng-repeat/survey controller

--- a/app/client/views/survey.html
+++ b/app/client/views/survey.html
@@ -2,15 +2,15 @@
 
   <h1>Let's start out with a quick survey</h1>
 
-  <div id="surveyItem" ng-repeat="users in data">
+  <div id="surveyItem" ng-repeat="question in questions | filter:currentQuestion">
     <h2>{{users.caption}}</h2>
-    <img  id="surveyImg" src="{{users.image_desktop}}" height="200" width="300">
+    <img  id="surveyImg" src="{{question.image_desktop}}" height="200" width="300">
     <br>
         <label class="btn btn-primary">
-          <input type="checkbox" ng-click="yes(users.id)">That's me</button>
+          <input type="checkbox" ng-click="yes(question.id)">That's me</button>
         </label>
         <label class="btn btn-primary">
-          <input type="checkbox" ng-click="no(users.id)">Not quite</button>
+          <input type="checkbox" ng-click="no(question.id)">Not quite</button>
         </label>
   </div>
   <button ng-click="addResponse()">Submit</button>
