removed submit button, view now redirecting to matches when survey is over

--- a/app/client/views/survey.html
+++ b/app/client/views/survey.html
@@ -15,5 +15,5 @@
       </label>
     <!-- </div> -->
   </div>
-  <button ng-click="addResponse()">Submit</button>
+  <!-- <button ng-click="addResponse()">Submit</button> -->
 </div>
