--- a/app/client/views/takesurvey.html
+++ b/app/client/views/takesurvey.html
@@ -1,5 +1,7 @@
 <div ng-controller='takesurveyCtrl'>
 
+  <button ng-click="logout()">Logout</button>
+
   <h2 id="subHeader">Now that that's out of the way!</h1>
 
   <button ng-click="survey()">Let's take that survey</button>
