--- a/app/client/src/styles/styles.css
+++ b/app/client/src/styles/styles.css
@@ -23,14 +23,14 @@ ul, li {
   padding: 20px
 }
 
-#surveyItem {
+.surveyItem {
   padding: 20px;
+  height: 700px;
+  width: auto;
 }
 
-#surveyImg {
-  height: auto;
+.surveyImg {
+  height: 300px;
   width: auto;
-  max-width: 600px;
-  max-height: 600px;
   padding: 20px;
 }
