Code clean up on front end files
Added comments and removed dead code

--- a/app/client/views/register.html
+++ b/app/client/views/register.html
@@ -4,7 +4,7 @@
 
   <form action="/auth/facebook" method="get">
     <div>
-      <input type="image" src="src/img/fblogin.png" ng-submit="load()">
+      <input type="image" src="src/img/fblogin.png" ng-submit="login()">
     </div>
   </form>
 
