--- a/app/client/views/main.html
+++ b/app/client/views/main.html
@@ -6,9 +6,12 @@
 
 
 <h2>We think you might like these people</h2><br>
-  <div ng-repeat="match in matchesData.data">
-    <h3>  {{ match.name }}
-      {{ match.email }} </h3>
-    <img  src="{{ match.picture }}" />
+  <div ng-repeat="match in matchesData.data" >
+   <img class="matchImg" src="{{ match.picture }}" />
+   <div class="matchDiv" style="display:inline-block;">
+    <h3>{{ match.name }} <br>
+        {{ match.email }} </h3>
+   </div>
   </div>
+  <br>
 </div>
